--- a/style.css
+++ b/style.css
@@ -1,107 +1,179 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 body {
-    font-family: cursive;
+    background-color:rgb(11, 8, 20);
+    
 }
-
-.header {
-    padding-top: 98vh;
-    background: url('Image/1234.jpg');
-    background-size: 100vw 100vh;
-    position: relative;
-}
-
-.head_buttom {
-    position: absolute;
-    top: 2%;
-    left: 60%; 
-    right: 0;
-    bottom: 0;
-    color:rgba(255, 255, 255, 0.445);
-}
-
-.head_buttom :hover{
-    opacity: 0.8;
-}
-
-.hello {
-    font-size: 350%;
-    position:absolute;
-    z-index: 2;
-    top: 50%;
-    left: 12%;
-    color:rgba(255, 255, 255, 0.445);
-    background-color:#14263167;
-    padding: 15;
-}
-
-.name{
-    font-size: 200%;
-    position:absolute;
-    z-index: 2;
-    top: 70%;
-    left: 12%;
-    color:rgba(255, 255, 255, 0.445);
-    background-color:#14263167;
-    padding: 15;
-}
-
-p.txt{
-    color:white;
-    font-family:adobe-jenson-pro-display;
-    text-align: center;
-}
- a {
-    color:#2b2b2b;
+a {
     text-decoration: none;
-    font-family: adobe-jenson-pro-display;
-    font-size: 200%;
-    margin: 2%;
-} 
-
-
-p.title {
-    font-size: 200%;
-    font-style:normal;
+    color:rgb(56, 56, 56);
+    float: right;
+}
+p {
+    font-size: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
-    color:#8b8687;
+    color: rgb(218, 218, 218);
+    padding:5%;
 }
 
-.cont {
-    font-size: 120%;
-    color: #8b8687;
-    margin-left: 15%;
-    margin-top: 5%;
-    font-style:normal;
-    text-align: left;
-    line-height: 150%;
-    position: relative;
+nav {
+    backdrop-filter: blur(5px);
+    opacity: 90%;
+    position: fixed;
+    z-index: 2;
+    width: 100%;
+    font-family: 'Julius Sans One', Helvetica, sans-serif;
+    font-size: 20px;
+    background-color: rgb(241, 241, 241, 0.1);
+    border-bottom: 1px solid rgb(99, 99, 99);
+}
+nav>a {
+    margin-left: 5%;
+    float: right;
+    margin: 12px 20px;
+    padding-top: 10px;
 }
 
-.img_me{
+#but {
+    display:inline;
+}
+#but>a{
+    cursor:pointer;
+    padding-top: 20px;
+    margin-right: 35px;
+    letter-spacing: 3px;
+}
+#but>a:hover{
+    transform: scale(1.1);
+}
+
+@media (min-width:785px){
+    .menu_img {
+        display: none;
+        visibility: hidden;
+    }
+}
+@media (min-width:785px){
+    #mobile {
+        display: none;
+        visibility: hidden;
+    }
+}
+@media (max-width:784px){
+    #but{
+        display: none;
+        visibility: hidden;
+    }
+}
+
+.logo {
+    margin-left: 20px;
+    margin-top: 5px;
+    width: 60px;
+    height: 50px;
+}
+
+.menu_img {
+    width: 50px;
+    height: 40px;
+    float: right;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+#mobile {
+    display: none;
+    width: 100%;
+    padding-bottom: -55px;
+    margin-bottom: -55px;
+}
+#mobile>a {
+    margin-right: 80px;
+    margin-top: -55px;
+    cursor: pointer;
+}
+
+.head {
+    background-image: url("1234.jpg");
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
+.dara {
+    position: absolute;
+    margin-top: 100px;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate( -50%, -50%);
+    font-size: 50px;
+    opacity: 80%;
+    border-bottom: 1px solid rgb(14, 14, 14);
+    color:rgb(14, 14, 14);
+}
+
+.graf {
     position:absolute;
-    margin-left: 60%;
+    margin-top: 180px;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate( -50%, -50%);
+    font-size: 20px;
+    color:rgb(14, 14, 14);
 }
 
-.fotorama {
-    margin-left: 20%;
-    width: 800;
-    height: 750;
+ #block {
+    position: absolute;
+    z-index: 1;
+    width: 450px;
+    height: 250px; 
+    margin-top: 330px;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate( -50%, -50%);
+    backdrop-filter: blur(5px);
+    border: 2px solid rgb(14, 14, 14);
+}  
+
+#all {
+     margin-left: 50%;
+    transform: translate(-50%,0);
 }
 
-.foot {
-    color:#8b8687;
+#me {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    /* font-weight:200; */
+    color: rgb(218, 218, 218);
+    letter-spacing: 1px;
+    padding-bottom: 20px;
+    float: left;
+}
+.ph {
+    width: 250px;
+    height: 250px;
+    float: left;
+    padding-right: 20px;
+}
+
+.footer {
+    color: gray;
     text-align: center;
+    padding-bottom: 1%;
 }
 
-#toTop {
-    width:3%;
-    height:4%;
-    border:1px;
-    border-radius:5%; /*закругление углов*/
+
+#totop {
+    width:25px;
+    height:25px;
+    border-radius:50%; 
     background:#666666;
     text-align:center;
-    padding:5px;
+    padding:1%; 
     position:fixed;
-    bottom:4%; /* отступ кнопки от нижнего края страницы*/
+    bottom:4%; 
     right:2%;
     cursor:pointer;
     display:none;
@@ -110,12 +182,6 @@ p.title {
     font-size:160%;
     opacity:30%;
 }
-
-
-/* .bg {
-    opacity: 80%;
-    position:static;
-    top: -20;
-    left: -50;
-    z-index: 1;
-} */
+#totop:hover {
+    transform: scale(1.2);
+}
